@startuml

Title Domænemodel - Olsker Cupcakes

hide circle
hide methods

    class User {
        id
        username
        password
        email
        address
    }

    class Order {
        id
        Date
        total Price
    }

    class Cupcake {
        quantity
        price
    }

    class Bottoms {
        name
    }

    class Topping {
        name
    }

User "1" -- "0..*" Order : afgiver
Order "1" -- "1..*" Cupcake : indeholder
Cupcake "1" -- "1" Bottoms : har
Cupcake "1" -- "1" Topping : har


@enduml
